Update the Header design.

--- a/.env
+++ b/.env
@@ -15,8 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=63c50111044748cb9d1d69b9b57733c8
+APP_DEBUG=true
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -40,9 +41,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 #MAILER_DSN=smtp://user:pass@smtp.example.com:port
+MAILER_DSN=smtp://info@hotel-dashboard.at:nW5E6R5de3yZZz5Z@mail.your-server.de:21
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail://alshalalhiess@gmail.com:AlshalalHiess1992@default?verify_peer=0
+#MAILER_DSN=gmail://alshalalhiess@gmail.com:AlshalalHiess1992@default
 ###< symfony/google-mailer ###
