make other page availabe rooms with paramters.

--- a/.env
+++ b/.env
@@ -41,10 +41,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 #MAILER_DSN=smtp://user:pass@smtp.example.com:port
-MAILER_DSN=smtp://info@hotel-dashboard.at:nW5E6R5de3yZZz5Z@mail.your-server.de:21
+MAILER_DSN=smtp://info:nW5E6R5de3yZZz5Z@mail.your-server.de:default
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-#MAILER_DSN=gmail://alshalalhiess@gmail.com:AlshalalHiess1992@default
+#MAILER_DSN=gmail+smtp://USERNAME:APP-PASSWORD@default
+MAILER_DSN=gmail+smtp://alshalalhiess:AlshalalHiess1992@default
 ###< symfony/google-mailer ###
