--- a/.env
+++ b/.env
@@ -41,11 +41,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 #MAILER_DSN=smtp://user:pass@smtp.example.com:port
-MAILER_DSN=smtp://info:nW5E6R5de3yZZz5Z@mail.your-server.de:default
+#MAILER_DSN=smtp://noreply@hotel-dashboard.at:8LmhJ2KLy6Zmw8ZF@mail.hotel-dashboard.at:default
+#MAILER_DSN=smtp://localhost
+
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
 #MAILER_DSN=gmail+smtp://USERNAME:APP-PASSWORD@default
-MAILER_DSN=gmail+smtp://alshalalhiess:AlshalalHiess1992@default
+MAILER_DSN=gmail+smtp://alshalalhiess@gmail.com:AlshalalHiess1992@smtp.gmail.com:587
 ###< symfony/google-mailer ###
