Home Form Update Styling

--- a/.env
+++ b/.env
@@ -41,7 +41,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 #MAILER_DSN=smtp://user:pass@smtp.example.com:port
-MAILER_DSN=smtp://info:nW5E6R5de3yZZz5Z@mail.your-server.de:465
+MAILER_DSN=smtp://info%40hotel-dashboard.at:nW5E6R5de3yZZz5Z@mail.your-server.de:465
+MAILER_FROM=info@hotel-dashboard.at
 #MAILER_DSN=smtp://localhost
 
 ###< symfony/mailer ###
