Email success + modify the booking code + styling

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=63c50111044748cb9d1d69b9b57733c8
 APP_DEBUG=true
 ###< symfony/framework-bundle ###
@@ -41,7 +41,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 #MAILER_DSN=smtp://user:pass@smtp.example.com:port
-MAILER_DSN=smtp://info%40hotel-dashboard.at:nW5E6R5de3yZZz5Z@mail.your-server.de:465
+MAILER_DSN=smtp://info%40hotel-dashboard.at:nW5E6R5de3yZZz5Z@mail.your-server.de:587
 MAILER_FROM=info@hotel-dashboard.at
 #MAILER_DSN=smtp://localhost
 
@@ -50,5 +50,5 @@ MAILER_FROM=info@hotel-dashboard.at
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
 #MAILER_DSN=gmail+smtp://USERNAME:APP-PASSWORD@default
-#MAILER_DSN=gmail+smtp://alshalalhiess@gmail.com:AlshalalHiess1992@smtp.gmail.com:587
+#MAILER_DSN=gmail+smtp://alshalalhiess%40gmail.com:AlshalalHiess1992@smtp.gmail.com:587?encryption=ssl&auth_mode=oauth
 ###< symfony/google-mailer ###
