add a Validation in to the start date and end date.

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=63c50111044748cb9d1d69b9b57733c8
 APP_DEBUG=true
 ###< symfony/framework-bundle ###
